Adicionar link do twitter

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <img src="assets/img/insta_icon.png" />
       </a>
     </div>
+    <div class="social">
+      <a href="http://www.twitter/manticore" target="_blank">
+        <img src="assets/img/insta_icon.png" />
+      </a>
+    </div>
   </header>
   <article>
     <div class="portfolio"> 
