--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <header>
     <h1>Marcelo Meneses</h1>
     <p>Tatuador, ilustrador, zueiro</p>
+    <p>Namorada: Cinara</p>
     <div class="social">
       <a href="https://www.facebook.com/marcelomnss" target="_blank">
         <img src="assets/img/fb_icon.png" />
